Fix Disqus undefined variable

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,7 +36,7 @@ layout: page
 				(function() {  // DON'T EDIT BELOW THIS LINE
 					var d = document, s = d.createElement('script');
 
-					dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+					d.src = '//' + disqus_shortname + '.disqus.com/embed.js';
 
 					s.setAttribute('data-timestamp', +new Date());
 					(d.head || d.body).appendChild(s);
