--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,9 +35,7 @@ layout: page
 
 				(function() {  // DON'T EDIT BELOW THIS LINE
 					var d = document, s = d.createElement('script');
-
-					d.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-
+					s.src = '//' + disqus_shortname + '.disqus.com/embed.js';
 					s.setAttribute('data-timestamp', +new Date());
 					(d.head || d.body).appendChild(s);
 				})();
