--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -6,3 +6,10 @@ $middle-gradient-color: mix($brand-color, $secondary-brand-color, 95%);
 $tablet: "(min-width: 450px)";
 $mid-point: "(min-width: 620px)";
 $desktop: "(min-width: 768px)";
+
+
+$primary-color: #FF7E41;
+$second-color: #3E78C0;
+$third-color: #B1FFFF;
+$black: #111;
+$white: #EEE;
