--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -20,8 +20,7 @@
 header {
 	color: #fff;
 	padding: 20px 0;
-	background: $brand-color; /* Old browsers */
-	background: linear-gradient(to bottom, $brand-color 0%, $middle-gradient-color 100%) no-repeat $brand-color;
+	background: $black; /* Old browsers */
 
 	a {
 		color: #fff;
