--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 ---
-<div class="content">
+
+{{ content }}
+<!--<div class="content">
 	<section class="page">
 		<div class="container {% if page.full_width %}max-container{% endif %}">
 			{% if page.heading %}
@@ -15,4 +17,4 @@ layout: default
 			{{ content }}
 		</div>
 	</section>
-</div>
+</div>-->
