--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -8,8 +8,8 @@ $mid-point: "(min-width: 620px)";
 $desktop: "(min-width: 768px)";
 
 
-$primary-color: #FF7E41;
-$second-color: #3E78C0;
+$primary-color: #2098f5;
+$second-color: #ff671f;
 $third-color: #B1FFFF;
 $black: #111;
 $white: #EEE;
