--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 			<div class="container">
 				<div class="company-name">
 					<a href="{{ site.baseurl }}/">
-						<img src="{{ site.baseurl }}/images/getup-logo-white.png" alt="GetUp Logo" width="95" height="33" class="nav__logo"/>
+						<img src="{{ site.baseurl }}/images/poweruplogo.png" alt="GetUp Logo" width="95" height="33" class="nav__logo"/>
 					</a>
 				</div>
 				{% include navigation.html %}
