--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -5,7 +5,7 @@ html, body {
 	padding: 0;
 }
 
-h1, h2, h3, h4, h5, h6, div, p, a, li, ul, body, section, .sub-heading {
+h1, h2, h3, h4, h5, h6, div, p, a, li, ul, body, section, .sub-heading, .normal {
 	font-family: "Lato" ,"San Francisco", "Helvetica Neue", "Helvetica", "Arial", sans-serif !important;
 }
 
@@ -14,9 +14,11 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: "Lobster", "San Francisco", "Helvetica Neue", "Helvetica", "Arial", sans-serif !important;
 }
 
-.caption, .narrative {
+.caption, .narrative, .slab {
 	font-family: "Roboto Slab", "San Francisco", "Helvetica Neue", "Helvetica", "Arial", sans-serif !important;
 }
+
+
 
 a {
 	color: #00a4ca;
@@ -74,7 +76,7 @@ p, address {
 
 .button {
 	background: $primary-color;
-	border-radius: 20px;
+	border-radius: 5px;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.12);
  	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 	padding: 0.65em 1.3em;
