--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -70,7 +70,7 @@ footer {
 	padding: 50px 0 50px 0;
 	font-size: 1.1em;
 	position: relative;
-	background: #2b2b40;
+	background: black;
 	color: #fff;
 
 	.copyright {
@@ -85,13 +85,13 @@ footer {
 	
 	&,
 	a {
-		color: #999;
+		// color: #999;
 	}
 
 	h2 {
 		font-size: 1.4em;
 		margin: 30px 0;
-		color: #ccc;
+		// color: #ccc;
 	}
 
 	.footer-columns {
