--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -5,7 +5,7 @@ $middle-gradient-color: mix($brand-color, $secondary-brand-color, 95%);
 // Breakpoints
 $tablet: "(min-width: 450px)";
 $mid-point: "(min-width: 620px)";
-$desktop: "(min-width: 768px)";
+$desktop: "(min-width: 64em)";
 
 
 $primary-color: #2098f5;
