--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -3,8 +3,8 @@ $secondary-brand-color: #4182e4;
 $middle-gradient-color: mix($brand-color, $secondary-brand-color, 95%);
 
 // Breakpoints
-$tablet: "(min-width: 450px)";
-$mid-point: "(min-width: 620px)";
+$tablet: "(min-width: 40em)";
+$mid-point: "(min-width: 40em)";
 $desktop: "(min-width: 64em)";
 
 
