--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -118,13 +118,22 @@ a:hover {
 }
 
 .gradient {
-	background: rgba(255,102,31,1);
-    background: -moz-linear-gradient(left, rgba(255,102,31,1) 0%, rgba(224,58,20,1) 100%);
-    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255,102,31,1)), color-stop(100%, rgba(224,58,20,1)));
-    background: -webkit-linear-gradient(left, rgba(255,102,31,1) 0%, rgba(224,58,20,1) 100%);
-    background: -o-linear-gradient(left, rgba(255,102,31,1) 0%, rgba(224,58,20,1) 100%);
-    background: -ms-linear-gradient(left, rgba(255,102,31,1) 0%, rgba(224,58,20,1) 100%);
-    background: linear-gradient(to right, rgba(255,102,31,1) 0%, rgba(224,58,20,1) 100%);
+	background: rgba(255,102,31,1) ;
+    background: -moz-linear-gradient(left, rgba(255,102,31,1) 0%, rgba(224,58,20,1) 100%) !important;
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255,102,31,1)), color-stop(100%, rgba(224,58,20,1))) !important;
+    background: -webkit-linear-gradient(left, rgba(255,102,31,1) 0%, rgba(224,58,20,1) 100%) !important;
+    background: -o-linear-gradient(left, rgba(255,102,31,1) 0%, rgba(224,58,20,1) 100%) !important;
+    background: -ms-linear-gradient(left, rgba(255,102,31,1) 0%, rgba(224,58,20,1) 100%) !important;
+    background: linear-gradient(to right, rgba(255,102,31,1) 0%, rgba(224,58,20,1) 100%) !important;
+}
+
+.reduced-gradient {
+	background: -moz-linear-gradient(left, rgba(255,102,31,0.85) 0%, rgba(224,58,20,0.85) 100%) !important;
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255,102,31,0.85)), color-stop(100%, rgba(224,58,20,0.85))) !important;
+    background: -webkit-linear-gradient(left, rgba(255,102,31,0.85) 0%, rgba(224,58,20,0.85) 100%) !important;
+    background: -o-linear-gradient(left, rgba(255,102,31,0.85) 0%, rgba(224,58,20,0.85) 100%) !important;
+    background: -ms-linear-gradient(left, rgba(255,102,31,0.85) 0%, rgba(224,58,20,0.85) 100%) !important;
+    background: linear-gradient(to right, rgba(255,102,31,0.85) 0%, rgba(224,58,20,0.85) 100%) !important;
 }
 
 .ghost {
