--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -522,3 +522,17 @@ body {
     margin-top: 2em;
 }
 
+.sponsors {
+    text-align: center;
+    color:white;
+}
+
+.sponsor-icon {
+    width: 8rem;
+    margin: 20px;
+}
+
+.sponsor-icons {
+    display: flex;
+    justify-content: center;
+}
