--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -20,7 +20,7 @@
 header {
 	color: #fff;
 	padding: 20px 0;
-	background: $black; /* Old browsers */
+	background: black; /* Old browsers */
 
 	a {
 		color: #fff;
