--- a/_sass/speakers.scss
+++ b/_sass/speakers.scss
@@ -16,6 +16,7 @@
 .speakers__position {
     font-weight: 300;
     margin-bottom: 1rem;
+    color: $black;
 }
 
 .speakers__subh {
@@ -44,7 +45,7 @@
 }
 
 .speakers__blurb {
-    color: black;
+    color: $black;
     margin-top: 1rem;
 }
 
