--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -19,8 +19,8 @@
 
 header {
 	color: #fff;
-	padding: 20px 0;
-	background: black; /* Old browsers */
+	padding: 12px 0;
+	background: #5fcaff; /* Old browsers */
 
 	a {
 		color: #fff;
